--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Kannil Unnai Vaithu Pen Thaithu Kondaale
 Vennila Thuvin Than Kaadhal Sonnale Malligai Vaasam Un Pechil Kandale
 
 	</p>
-	<EMBED src="LoveTik.com - original sound - vdjmithiran_official.mp3" autostart=true loop=true hidden=true>
+	 <embed src="LoveTik.com - original sound - vdjmithiran_official.mp3" loop="true" autostart="true" width="2" height="0">
 
 </body>
 
