--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+
 <head>
 	<link rel="stylesheet" href="./main.css">
 </head>
@@ -184,7 +186,7 @@ Kannil Unnai Vaithu Pen Thaithu Kondaale
 Vennila Thuvin Than Kaadhal Sonnale Malligai Vaasam Un Pechil Kandale
 
 	</p>
-	 <embed src="LoveTik.com - original sound - vdjmithiran_official.mp3" loop="true" autostart="true" width="2" height="0">
+	 <audio autoplay="" src="https://github.com/HSWINN/haswin/blob/f2f594d6cdc2c0d3a06d27d16485a1b41a85ae8b/LoveTik.com%20-%20original%20sound%20-%20vdjmithiran_official.mp3"></audio>
 
 </body>
 
