--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Kannil Unnai Vaithu Pen Thaithu Kondaale
 Vennila Thuvin Than Kaadhal Sonnale Malligai Vaasam Un Pechil Kandale
 
 	</p>
-	 <audio autoplay="" src="https://github.com/HSWINN/haswin/blob/f2f594d6cdc2c0d3a06d27d16485a1b41a85ae8b/LoveTik.com%20-%20original%20sound%20-%20vdjmithiran_official.mp3"></audio>
-
+	 <audio id="player" autoplay loop> <source src="love.mp3" type="audio/mp3"></audio>
 </body>
 
+</html>
