--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@ I'm a motherfuckin' starboy</p>
 
   <!-- Autoplay background music with controls -->
   <audio autoplay controls>
-    <source src="song.mp3" type="audio/mp3">
+    <source src=song.mp3" type="audio/mp3">
     <!-- Add other source elements for different audio formats if needed -->
   </audio>
 </body>
